--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="src/index.js"></script>
+    <script src="src/index.js">
+        document.body.innerHTML="<h1>"
+    </script>
+    <a href="src/routes/recetas/recetas.js">recetas</a>
 </body>
 </html>
