--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <script src="src/index.js">
         document.body.innerHTML="<h1>"
     </script>
-    <a href="src/routes/recetas/recetas.js">recetas</a>
+    <a href="/api/recetas">recetas</a>
 </body>
 </html>
